--- a/holamundo/templates/registro_cliente.html
+++ b/holamundo/templates/registro_cliente.html
@@ -1,5 +1,9 @@
+{% extends 'partials/base.html' %}
 {% load static %}
 
+
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,16 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Registro de Cliente</title>
 
-    <!-- Enlaces a los estilos de Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- Asegúrate de cargar jQuery antes de los scripts de Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-    <!-- Enlace al estilo de Tempus Dominus -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tempusdominus-bootstrap-4@5.39.0/dist/css/tempusdominus-bootstrap-4.min.css">
-
-    <!-- Cargar archivos estáticos del formulario de Django -->
+    
     {{ form.media.css }}
     {{ form.media.js }}
 </head>
@@ -58,22 +53,25 @@
                 {{ form.correo }}
             </div>
         
-            <div class="form-group">
-                <label for="{{ form.usuario.id_for_label }}">Usuario:</label>
-                {{ form.usuario }}
-            </div>
-        
-            <div class="form-group">
-                <label for="{{ form.contraseña.id_for_label }}">Contraseña:</label>
-                {{ form.contraseña }}
-            </div>
+           
            
             <button type="submit" class="btn btn-primary">Registrar Cliente</button>
         </form>
     </div>
 
-    <!-- Scripts de Bootstrap (Popper.js y Bootstrap JS) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
 </body>
 </html>
+{% endblock %}
+{% block extra_javascript %}
+
+    <!-- Peity chart-->
+    <script src="{% static 'libs/peity/jquery.peity.min.js' %}"></script>
+
+    <!-- Plugin Js-->
+    <script src="{% static 'libs/chartist/dist/chartist.min.js' %}"></script>
+    <script src="{% static 'libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js' %}"></script>
+
+    <script src="{% static 'js/pages/dashboard.init.js' %}"></script>
+
+{% endblock %}
