Grid ver clientes
Tabla de clientes

--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -38,7 +38,7 @@
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{% url 'subir_documento' %}" key="Inbox">Subir Documento</a></li>
                                     <li><a href="{% url 'email-emailread' %}" key="Email_Read">Ver Documento</a></li>
-                                    <li><a href="{% url 'email-emailcompose' %}" key="Email_Compose">Email Compose</a></li>
+                                    
                                 </ul>
                             </li>
                             
@@ -50,7 +50,7 @@
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{%url 'registro_cliente'%}" key="Inbox">Registro cliente</a></li>
                                     <li><a href="{% url 'email-emailread' %}" key="Email_Read">Editar cliente</a></li>
-                                    <li><a href="{% url 'email-emailcompose' %}" key="Email_Compose">Email Compose</a></li>
+                                    
                                 </ul>
                             </li>
                             <li>
@@ -61,6 +61,7 @@
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{%url 'registrar_cita'%}" key="Cita">Registro citas</a></li>
                                     <li><a href="{% url 'citas_list' %}" key="Email_Read">Ver citas</a></li>
+                                    <li><a href="{% url 'lista_citas' %}" key="Email_Read">Historial citas</a></li>
                                     
                                 </ul>
                             </li>
