--- a/holamundo/templates/components/ui-elements/ui_elements-grid.html
+++ b/holamundo/templates/components/ui-elements/ui_elements-grid.html
@@ -8,47 +8,45 @@
         <div class="card">
             <div class="card-body">
 
-                <h4 class="card-title">Grid options</h4>
-                <p class="card-title-desc">See how aspects of the Bootstrap grid
-                    system work across multiple devices with a handy table.</p>
-
+                <h4 class="card-title">Detalle de la cita</h4>
+                
                 <div class="table-responsive">
                     <table class="table table-bordered table-striped mb-0">
                         <thead class="text-center">
                         <tr>
+                                <th class="text-nowrap" scope="row">Cita</th>
+                                
+                        </tr>   
+                        <tr>
                             <th scope="col"></th>
                             <th scope="col">
-                            xs<br>
+                            Abogado<br>
                             <span class="fw-normal">&lt;576px</span>
                             </th>
                             <th scope="col">
-                            sm<br>
+                            Cliente<br>
                             <span class="fw-normal">≥576px</span>
                             </th>
                             <th scope="col">
-                            md<br>
+                            Fecha de cita<br>
                             <span class="fw-normal">≥768px</span>
                             </th>
                             <th scope="col">
-                            lg<br>
+                            Lugar de cita<br>
                             <span class="fw-normal">≥992px</span>
                             </th>
                             <th scope="col">
-                            xl<br>
+                            Descripción<br>
                             <span class="fw-normal">≥1200px</span>
                             </th>
                             <th scope="col">
-                            xxl<br>
+                            Fecha de creación<br>
                             <span class="fw-normal">≥1400px</span>
                             </th>
                         </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <th class="text-nowrap" scope="row">Grid behavior</th>
-                                <td colspan="2">Horizontal at all times</td>
-                                <td colspan="4">Collapsed to start, horizontal above breakpoints</td>
-                            </tr>
+                            
                             <tr>
                                 <th class="text-nowrap" scope="row">Max container width</th>
                                 <td>None (auto)</td>
