--- a/holamundo/templates/ver_cita.html
+++ b/holamundo/templates/ver_cita.html
@@ -1,56 +1,72 @@
 {% extends 'partials/base.html' %}
 {% load static %}
-{% block extra_css %}
-    <link href="{% static 'libs/chartist/dist/chartist.min.css' %}" rel="stylesheet">
-{% endblock  %}
 
 {% block content %}
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <title>Detall de la cita</title>
-</head>
-<body>
-    <div class="container mt-4">
+<div class="row">
+    <div class="col-12">
         <div class="card">
-                <div class="card-header">
+            <div class="card-body">
 
-                        <h5 class="card-title">Detalle de la Cita</h5>
-
+                <h4 class="card-title">Detalle de la cita</h4>
+                
+                <div class="table-responsive">
+                    <table class="table table-bordered table-striped mb-0">
+                        <thead class="text-center">
+                        
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">
+                            Abogado<br>
+                            </th>
+                            <th scope="col">
+                            Cliente<br>
+                            </th>
+                            <th scope="col">
+                            Fecha de cita<br>
+                            </th>
+                            <th scope="col">
+                            Lugar de cita<br>
+                            </th>
+                            <th scope="col">
+                            Descripción<br>
+                            </th>
+                            <th scope="col">
+                            Fecha de creación<br>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            
+                            <tr>
+                                <th class="text-nowrap" scope="row"></th>
+                                <td >{{ cita.abogado }}</th>
+                                <td>{{ cita.cliente }}</td>
+                                <td>{{ cita.fecha_cita }}</td>
+                                <td>{{ cita.lugar_cita }}</td>
+                                <td>{{ cita.descripcion }}</td>
+                                <td>{{ cita.fecha_creacion }}</td>
+                                
+                            </tr>
+                            
+                                <td colspan="6"><form method="post" action="{% url 'eliminar_cita' codigo_cita=cita.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                                </form>
+                                </td>
+                                <td colspan="6"><form method="post" action="{% url 'editar_cita' codigo_cita=cita.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-primary">Editar</button>
+                                </form>
+                                </td>
+                            
+                        </tbody>
+                    </table>
                 </div>
-
-                <p class="card-text"><strong>Abogado:</strong>{{ cita.abogado }}</p>
-                <p class="card-text"><strong>Cliente:</strong> {{ cita.cliente }}</p>
-                <p class="card-text"><strong>Fecha_cita:</strong> {{ cita.fecha_cita }}</p>
-                <p class="card-text"><strong>Lugar_cita:</strong> {{ cita.lugar_cita }}</p>
-                <p class="card-text"><strong>Descripción:</strong> {{ cita.descripcion }}</p>
-                <p class="card-text"><strong>Fecha_Creación:</strong> {{ cita.fecha_creacion }}</p>
-
-
-                <form method="post" action="{% url 'eliminar_cita' codigo_cita=cita.id %}">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
-                </form>
-                <form method="post" action="{% url 'editar_cita' codigo_cita=cita.id %}">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Editar</button>
-                </form>
-
+            </div>
         </div>
-    </div>
-</body>
-</html>
-{% endblock %}
-{% block extra_javascript %}
+    </div> <!-- end col -->
 
-    <!-- Peity chart-->
-    <script src="{% static 'libs/peity/jquery.peity.min.js' %}"></script>
-
-    <!-- Plugin Js-->
-    <script src="{% static 'libs/chartist/dist/chartist.min.js' %}"></script>
-    <script src="{% static 'libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js' %}"></script>
-
-    <script src="{% static 'js/pages/dashboard.init.js' %}"></script>
+</div> <!-- end row -->
 
 {% endblock %}
