--- a/holamundo/templates/ver_cita.html
+++ b/holamundo/templates/ver_cita.html
@@ -54,7 +54,7 @@
                                     <button type="submit" class="btn btn-danger">Eliminar</button>
                                 </form>
                                 </td>
-                                <td colspan="6"><form method="post" action="{% url 'editar_cita' codigo_cita=cita.id %}">
+                                <td colspan="6"><form method="post" action="{{ cita.get_edit_url }}">
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-primary">Editar</button>
                                 </form>
