--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -59,7 +59,7 @@
                                     <span key="Email">Citas</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{%url 'registrar_cita'%}" key="Cita">Registro citas</a></li>
+                                    <li><a href="{%url 'registrar_cita1'%}" key="Cita">Registro citas</a></li>
                                     <li><a href="{% url 'citas_list' %}" key="Email_Read">Ver citas</a></li>
                                     <li><a href="{% url 'lista_citas' %}" key="Email_Read">Historial citas</a></li>
                                     
