--- a/holamundo/templates/editar_cita.html
+++ b/holamundo/templates/editar_cita.html
@@ -14,23 +14,23 @@
 </head>
 <body>
     <h1>Editar Cita</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
+                        
         {% csrf_token %}
+
         {% for field in form %}
-            <div>
-                {{ field.label_tag }}
+
+        <div class="form-group">
+                <label for="exampleInputEmail1">{{ field.label_tag }}</label>
+                 
                 {{ field }}
-                {% if field.errors %}
-                    <ul>
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
+        </div>
+
         {% endfor %}
-        <button type="submit">Guardar Cambios</button>
-    </form>
+        <div class="form-group"></div>
+        <input type="submit" class="mt-10 btn btn-primary" value="Submit">
+        </div>
+</form>
 </body>
 </html>
 
