--- a/holamundo/templates/ver_cita.html
+++ b/holamundo/templates/ver_cita.html
@@ -48,17 +48,15 @@
                                 <td>{{ cita.fecha_creacion }}</td>
                                 
                             </tr>
-                            
+
                                 <td colspan="6">
                                     <form method="post" action="{% url 'eliminar_cita' codigo_cita=cita.id %}">
-                                    
+                                      {% csrf_token %}
                                     <button type="submit" class="btn btn-danger">Eliminar</button>
                                     </form>
                                 </td>
                                 <td colspan="6">
-                                    <form method="post" action="{{ cita.get_edit_url }}">
-                                    
-                                    <button type="submit" class="btn btn-primary">Editar</button>
+                                    <a href='/editar_cita/{{cita.id}}' class="btn btn-primary">Editar</a>
                                     </form>
                                 </td>
                             
