Cambios de crud documentos

--- a/holamundo/templates/edit_documento.html
+++ b/holamundo/templates/edit_documento.html
@@ -42,7 +42,7 @@
                         <h2 class="mb-0">Ingrese sus datos</h2>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Registro de Citas</h5>
+                        <h5 class="card-title">Registro de Documentos</h5>
                       
                         {% for field in form %}
 
@@ -55,7 +55,7 @@
 
                         {% endfor %}
                         <div class="form-group"></div>
-                        <input type="submit" class="mt-10 btn btn-primary" value="Submit">
+                        <input type="submit" class="mt-10 btn btn-primary" value="Guardar">
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
         </div>
     </form>
 
-   
+    
 </body> 
 </html>
 {% endblock %}
