--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -36,8 +36,8 @@
                                     <span key="Email">Documentos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{% url 'subir_documento' %}" key="Inbox">Subir Documento</a></li>
-                                    <li><a href="{% url 'email-emailread' %}" key="Email_Read">Ver Documento</a></li>
+                                    <li><a href="{% url 'subir_documento' %}" key="subir_documento">Subir Documento</a></li>
+                                    <li><a href="{% url 'lista_documentos' %}" key="ver_documento">Ver Documento</a></li>
                                     
                                 </ul>
                             </li>
