--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -16,7 +16,7 @@
                                     <span key="Dashboard">Dashboard</span>
                                     
                                 </a>
-                                <a href="{% url 'dashboard' %}" class="waves-effect">
+                                <a href="" class="waves-effect">
                                     <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
                                     <span key="Dashboard">Abogado</span>
                                     
@@ -71,7 +71,7 @@
                                     <span key="Email">Casos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{% url 'email-emailread' %}" key="Email_Read">Ver casos</a></li>
+                                    <li><a href="{% url 'lista_abogados' %}" key="casos">Ver casos</a></li>
                                     
                                 </ul>
                             </li>
