--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -16,7 +16,7 @@
                                     <span key="Dashboard">Dashboard</span>
                                     
                                 </a>
-                                <a href="" class="waves-effect">
+                                <a href="{% url 'lista_abogados' %}" class="waves-effect">
                                     <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
                                     <span key="Dashboard">Abogado</span>
                                     
