--- a/holamundo/templates/partials/base.html
+++ b/holamundo/templates/partials/base.html
@@ -5,7 +5,7 @@
     <head>
     
         <meta charset="utf-8">
-        <title>{{title}} | Veltrix - Admin & Dashboard Template</title>
+        <title>{{title}} | Consorcio Efren</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description">
         <meta content="Themesbrand" name="author">
