Cambios en las tablas de consultorio
Abogado, citas, documentos
html

--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -71,7 +71,7 @@
                                     <span key="Email">Casos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{% url 'lista_abogados' %}" key="casos">Ver casos</a></li>
+                                    <li><a href="{% url 'lista_abogados1' %}" key="casos">Ver casos</a></li>
                                     
                                 </ul>
                             </li>
