--- a/holamundo/templates/partials/rightsidebar.html
+++ b/holamundo/templates/partials/rightsidebar.html
@@ -11,7 +11,7 @@
 
                 <!-- Settings -->
                 <hr class="mt-0" />
-                <h6 class="text-center">Choose Layouts</h6>
+                <h6 class="text-center">Escoja su vista</h6>
 
                 <div class="p-4">
                     <div class="mb-2">
