--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -32,8 +32,8 @@
 
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect">
-                                    <i class="ti-email"></i>
-                                    <span key="Email">Documentos</span>
+                                    <i class="mdi mdi-file-document"></i>
+                                    <span key="Documentos">Documentos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{% url 'subir_documento' %}" key="subir_documento">Subir Documento</a></li>
@@ -44,8 +44,8 @@
                             
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect">
-                                    <i class="ti-email"></i>
-                                    <span key="Email">Clientes</span>
+                                    <i class="mdi mdi-account-multiple"></i>
+                                    <span key="Clientes">Clientes</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{%url 'registro_cliente'%}" key="Inbox">Registro cliente</a></li>
@@ -55,8 +55,8 @@
                             </li>
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect">
-                                    <i class="ti-email"></i>
-                                    <span key="Email">Citas</span>
+                                    <i class="mdi mdi-clipboard-file-outline"></i>
+                                    <span key="Citas">Citas</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{%url 'registrar_cita1'%}" key="Cita">Registro citas</a></li>
@@ -67,8 +67,8 @@
                             </li>
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect">
-                                    <i class="ti-email"></i>
-                                    <span key="Email">Casos</span>
+                                    <i class="mdi mdi-file-find"></i>
+                                    <span key="Casos">Casos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="{% url 'lista_abogados1' %}" key="casos">Ver casos</a></li>
