--- a/holamundo/templates/partials/footer.html
+++ b/holamundo/templates/partials/footer.html
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-12">
                 ©
-                <script>document.write(new Date().getFullYear())</script> Veltrix<span class="d-none d-sm-inline-block">
-                    - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign.</span>
+                <script>document.write(new Date().getFullYear())</script> Consorcio Efren Caluña<span class="d-none d-sm-inline-block">
+                    - Consultorio Jurídico <i class="mdi mdi-heart text-danger"></i> Puyo.</span>
             </div>
         </div>
     </div>
