--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -71,7 +71,7 @@
                                     <span key="Casos">Casos</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="{% url 'lista_abogados1' %}" key="casos">Ver casos</a></li>
+                                    <li><a href="{% url 'abogados_por_cliente' %}" key="casos">Ver casos</a></li>
                                     
                                 </ul>
                             </li>
