--- a/holamundo/templates/cita_general.html
+++ b/holamundo/templates/cita_general.html
@@ -30,7 +30,7 @@
                 <th scope="col">Opciones</th>
             </tr>
         </thead>
-        {% for cita in citas %}
+        {% for cita in citas_cliente  %}
         <tbody>
             <tr>
                 <td>{{cita.abogado}}</td>
