--- a/holamundo/templates/registrar_cita1.html
+++ b/holamundo/templates/registrar_cita1.html
@@ -33,7 +33,7 @@
 
 <body>
 
-    <form method="post" action=" " class="container mt-4">
+    <form method="post" action="{% url 'registrar_cita1' %}" class="container">
         {% csrf_token %}
         <div class="row justify-content-center">
             <div class="col-sm-6">
@@ -43,26 +43,38 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Registro de Citas</h5>
-                      
-                        {% for field in form %}
-
+    
                         <div class="form-group">
-                                {{field.errors}}
-                                <label for="exampleInputEmail1">{{ field.label_tag }}</label>
-                                 
-                                {{field}}
+                            <label for="id_abogado" class="font-weight-bold">Abogado:</label>
+                            {{ form.abogado }}
                         </div>
-
-                        {% endfor %}
-                        <div class="form-group"></div>
-                        <input type="submit" class="mt-10 btn btn-primary" value="Submit">
+    
+                        <div class="form-group">
+                            <label for="id_cliente" class="font-weight-bold">Cliente:</label>
+                            {{ form.cliente }}
                         </div>
+    
+                        <div class="form-group">
+                            <label for="id_fecha_cita" class="font-weight-bold">Fecha para la Cita:</label>
+                            {{ form.fecha_cita }}
+                        </div>
+    
+                        <div class="form-group">
+                            <label for="id_lugar_cita" class="font-weight-bold">Lugar de la Cita:</label>
+                            {{ form.lugar_cita }}
+                        </div>
+    
+                        <div class="form-group">
+                            <label for="id_descripcion" class="font-weight-bold">Descripción:</label>
+                            {{ form.descripcion }}
+                        </div>
+    
+                        <button type="submit" class="btn btn-primary">Registrar Cita</button>
                     </div>
                 </div>
             </div>
         </div>
     </form>
-
    
 </body> 
 </html>
