--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -21,6 +21,11 @@
                                     <span key="Dashboard">Abogado</span>
                                     
                                 </a>
+                                <a href='/editar_abogado/{{abogado.id}}' class="waves-effect">
+                                    <i class="ti-home"></i><span class="badge rounded-pill bg-primary float-end">1</span>
+                                    <span key="Dashboard">Editar Abogado</span>
+                                    
+                                </a>
                             </li>
 
                             <li>
