--- a/holamundo/templates/formulario_abogado.html
+++ b/holamundo/templates/formulario_abogado.html
@@ -5,7 +5,12 @@
 
 {% block content %}
 
+<form method="post" enctype="multipart/form-data" action=" " class="container mt-4">
+  {% csrf_token %}
 <div class="container">
+  <div class="col-md-4 mb-3">
+  <input type="submit" class="mt-10 btn btn-primary" value="Guardar Información">
+</div>
     <div class="main-body">
     
           <!-- /Breadcrumb -->
@@ -17,12 +22,13 @@
                   <div class="d-flex flex-column align-items-center text-center">
                     {% if abogado.foto %}
                     <img src="{{ abogado.foto.url }}" alt="Admin" class="rounded-circle" width="150">
+                    <input type="file" name="foto">
                     {% endif %}
                     <div class="mt-3">
-                      <h4> {{ abogado.nombrea }} {{ abogado.apellido }} </h4>
+                      <h4> <input type="text" name="nombrea" value="{{ abogado.nombrea }}">
+                        <input type="text" name="apellido" value="{{ abogado.apellido }}"></h4 >
                       <p class="text-secondary mb-1">ABOGADO</p>
                       <p class="text-muted font-size-sm">Consorcio Jurídico Efren - Puyo </p>
-                      <a href="{% url 'registrar_cita1' %}" class="btn btn-primary">Registrar Cita</a>
                     </div>
                   </div>
                 </div>
@@ -32,15 +38,15 @@
                
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
-                    <span class="text-primary">{{ abogado.twitter }}</span>
+                    <span class="text-primary"><input type="text" name="twitter" value="{{ abogado.twitter}}"></span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
-                    <span class="text-primary">{{ abogado.instagram }}</span>
+                    <span class="text-primary"><input type="text" name="instagram" value="{{ abogado.instagram}}"></span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
-                    <span class="text-primary">{{ abogado.facebook}}</span>
+                    <span class="text-primary"><input type="text" name="facebook" value="{{ abogado.facebook}}"></span>
                   </li>
                 </ul>
               </div>
@@ -53,7 +59,7 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-primary">
-                        {{ abogado.correo }}
+                      <input type="text" name="correo" value="{{ abogado.correo}}">
                     </div>
                   </div>
                   <hr>
@@ -62,16 +68,16 @@
                       <h6 class="mb-0">Celular</h6>
                     </div>
                     <div class="col-sm-9 text-primary">
-                        {{ abogado.celular }}
+                      <input type="text" name="celular" value="{{ abogado.celular}}">
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Especialiazción</h6>
+                      <h6 class="mb-0">Especialización</h6>
                     </div>
                     <div class="col-sm-9 text-primary">
-                        {{ abogado.tipos_especialidad }}
+                      <input type="text" name="tipos_especialidad" value="{{ abogado.tipos_especialidad}}">
                     </div>
                   </div>
                   <hr>
@@ -80,7 +86,7 @@
                       <h6 class="mb-0">Años de experiencia</h6>
                     </div>
                     <div class="col-sm-9 text-primary">
-                        {{ abogado.experiencia }}
+                      <input type="text" name="experiencia" value="{{ abogado.experiencia}}">
                     </div>
                   </div>
                   <hr>
@@ -93,21 +99,17 @@
                   <div class="card h-100">
                     <div class="card-body">
                       <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Descripción</h6>
-                      {{ abogado.descripcion }}
+                      <textarea name="descripcion" rows="4" cols="50">{{ abogado.descripcion }}</textarea>
                     </div>
                   </div>
                 </div>
                 
               </div>
 
-
-
             </div>
           </div>
 
         </div>
 
-
-
-
+</form>
 {% endblock %}
