--- a/holamundo/templates/partials/base.html
+++ b/holamundo/templates/partials/base.html
@@ -20,6 +20,8 @@
         <link href="{% static 'css/icons.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- App Css-->
         <link href="{% static 'css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+        <link src="{% static 'css/perfil_abogado' %}" id="app-style" rel="stylesheet" type="text/css" /></link>
+        <link src="{% static 'css/p_abogado' %}" id="app-style" rel="stylesheet" type="text/css" /></link>
         {% endblock css %}
 
 </head>
@@ -116,7 +118,9 @@
     <script src="{% static 'libs/metismenu/dist/metisMenu.min.js' %}"></script>
     <script src="{% static 'libs/simplebar/dist/simplebar.min.js' %}"></script>
     <script src="{% static 'libs/node-waves/dist/waves.min.js' %}"></script>
-    <script src="{% static 'libs/jquery-sparkline/jquery.sparkline.min.js' %}"></script>    
+    <script src="{% static 'libs/jquery-sparkline/jquery.sparkline.min.js' %}"></script>
+
+
         
     {% block extra_javascript %}
 
