--- a/holamundo/templates/cita_list.html
+++ b/holamundo/templates/cita_list.html
@@ -32,7 +32,7 @@
         </div>
 
         <!-- Formulario para crear cita -->
-        <form method="post" action="{% url 'registrar_cita' %}" target="_blank">
+        <form method="post" action="{% url 'registrar_cita1' %}" target="_blank">
             {% csrf_token %}
 
             {{ form.as_p }}
