--- a/holamundo/templates/dashboard.html
+++ b/holamundo/templates/dashboard.html
@@ -43,7 +43,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Lista de Casos</h5>
                     <p class="card-text">Consulta la lista de casos atendidos por los abogados.</p>
-                    <a href="{% url 'ver_casos' %}" class="btn btn-primary">Ir</a>
+                    <a href="{% url 'abogados_por_cliente' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
 
