--- a/holamundo/templates/lista_documentos.html
+++ b/holamundo/templates/lista_documentos.html
@@ -17,7 +17,9 @@
         <div class="col-sm-8">
             <h1>Tus documentos son</h1>
         </div>
-    
+        <div class="col-sm-4">
+            <a href="{% url 'subir_documento'  %}" class="btn btn-primary">Nuevo</a>
+        </div>
     </div>
 
 <div>
