--- a/holamundo/templates/registrar_cita1.html
+++ b/holamundo/templates/registrar_cita1.html
@@ -1,4 +1,3 @@
-
 {% extends 'partials/base.html' %}
 {% load static %}
 {% block extra_css %}
@@ -70,7 +69,7 @@
                             {{ form.descripcion }}
                         </div>
     
-                        <input type="submit" class="mt-10 btn btn-primary" value="Submit">
+                        <button type="submit" class="btn btn-primary">Registrar Cita</button>
                     </div>
                 </div>
             </div>
@@ -92,4 +91,3 @@
     <script src="{% static 'js/pages/dashboard.init.js' %}"></script>
 
 {% endblock %}
-
