--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -36,6 +36,13 @@
                             </li>
 
                             <li>
+                                <a href="{% url 'calendar' %}" class=" waves-effect">
+                                    <i class="ti-calendar"></i>
+                                    <span key="Calendar">Calendar</span>
+                                </a>
+                            </li>
+
+                            <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect">
                                     <i class="mdi mdi-file-document"></i>
                                     <span key="Documentos">Documentos</span>
