--- a/holamundo/templates/ver_cita.html
+++ b/holamundo/templates/ver_cita.html
@@ -55,7 +55,7 @@
                                     </form>
                                 </td>
                                 <td colspan="3">
-                                    <a href='/editar_cita/{{cita.id}}' class="btn btn-primary">Editar</a>
+                                    <a href="{% url 'editar_cita' codigo_cita=cita.id %}" class="btn btn-primary">Editar</a>
                                     
                                 </td>
                             </tr>
