--- a/holamundo/templates/registro_cliente.html
+++ b/holamundo/templates/registro_cliente.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 
+{% block content %}
+
+
 
 {% block content %}
 <!DOCTYPE html>
@@ -9,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Registro de Cliente</title>
+    <title>Registross de Cliente</title>
 
     
     {{ form.media.css }}
